--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "webhook": "node deployment/webhook.js"
+    "webhook": "node deployment/webhook.js",
+    "seed": "node server/seed.js"
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
