--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run start\" \"vite\"",
+    "dev": "concurrently \"npm run start\" \"vite --host\"",
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server/index.js",
