--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "express": "^4.18.2",
     "multer": "^2.0.2",
     "mysql2": "^3.9.1",
+    "opencascade.js": "^1.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "three": "^0.182.0"
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
+    "three": "^0.182.0",
+    "three-stl-loader": "^1.0.6",
+    "vite-plugin-top-level-await": "^1.6.0",
+    "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
