--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-gear---vet-webxr-hub",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run start\" \"vite --host\"",
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
+    "adm-zip": "^0.5.16",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jszip": "^3.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.9.1",
     "opencascade.js": "^1.1.1",
