--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "adm-zip": "^0.5.16",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "react-dom": "^19.2.3",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "three": "^0.182.0",
     "three-stl-loader": "^1.0.6",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0"
