--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.563.0",
     "multer": "^2.0.2",
     "mysql2": "^3.9.1",
     "opencascade.js": "^1.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "three": "^0.182.0",
