--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.14.0",
     "@types/three": "^0.158.0",
     "@vitejs/plugin-react": "^5.0.0",
