--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "start": "node server/index.js",
     "webhook": "node deployment/webhook.js",
-    "seed": "node server/seed.js"
+    "seed": "node server/seed.js",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
@@ -36,6 +37,7 @@
     "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.14.0",
     "@types/three": "^0.158.0",
