--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "multer": "^2.0.2",
@@ -32,6 +34,7 @@
     "opencascade.js": "^1.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.3",
     "react-markdown": "^10.1.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
