--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-gear---vet-webxr-hub",
   "private": true,
-  "version": "1.7.0",
+  "version": "1.8.0",
   "type": "module",
   "engines": {
     "node": ">=20.0.0"
@@ -46,7 +46,13 @@
   "devDependencies": {
     "@playwright/test": "^1.58.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/adm-zip": "^0.5.7",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
     "@types/three": "^0.169.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
