--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
         "./src/*"
       ]
     },
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "noEmit": true
