--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "jszip": "^3.10.1",
+    "ltijs": "^5.9.9",
+    "ltijs-sequelize": "^2.4.4",
     "lucide-react": "^0.563.0",
     "multer": "^2.0.2",
     "mysql2": "^3.9.1",
@@ -36,6 +38,7 @@
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.3",
     "react-markdown": "^10.1.0",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "three": "^0.182.0",
