feat: Implement model cloning, PWA install prompt, and enhance the development server setup.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "dev": "concurrently \"npm run start\" \"vite --host\"",
         "build": "vite build",
         "preview": "vite preview",
-        "start": "node server/index.js",
+        "start": "nodemon server/index.js",
         "webhook": "node deployment/webhook.js",
         "seed": "node server/seed.js",
         "test:e2e": "playwright test",
@@ -72,6 +72,7 @@
         "eslint-plugin-prettier": "^5.5.5",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
+        "nodemon": "^3.1.11",
         "postcss": "^8.5.6",
         "prettier": "^3.8.1",
         "tailwindcss": "^3.4.17",
