--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@google/genai": "^1.35.0",
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.5.0",
+        "@types/katex": "^0.16.8",
         "adm-zip": "^0.5.16",
         "bcryptjs": "^3.0.3",
         "body-parser": "^1.20.2",
@@ -33,6 +34,7 @@
         "i18next": "^25.8.0",
         "i18next-browser-languagedetector": "^8.2.0",
         "jszip": "^3.10.1",
+        "katex": "^0.16.28",
         "ltijs": "^5.9.9",
         "ltijs-sequelize": "^2.4.4",
         "lucide-react": "^0.563.0",
